--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,59 @@
     transform: rotate(360deg);
   }
 }
+
+body{
+  background: #f3f2ef;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  height: 100vh;
+  width: 100vw;
+}
+
+.box{
+  width: 35vw;
+  height: 40vh;
+  border-radius: 0.5rem;
+  box-shadow: 0 0.2rem 3rem rgba(0,0,0,0.2);
+  background: #a5bbdd;
+  overflow: hidden;
+  min-width: 20rem;
+  min-height: 35rem;
+  border-radius: 20px;
+}
+
+.input-data{
+  margin: 10px 50px;
+  padding: 20px;
+  text-align: center;
+}
+.inputField{
+  border-radius: 30px;
+  border-style: none;
+  padding: 10px;
+  cursor: pointer;
+  font-size: 20px;
+  text-decoration: none;
+
+}
+.info{
+  margin: 20px;
+  padding: 20px;
+}
+.error{
+  text-align: center;
+  font-size: 30px;
+}
+.location, .temp{
+  text-align: center;
+  padding: 10px;
+  font-size: 40px;
+}
+.tempMin_max{
+  display: flex;
+  justify-content: space-between;
+  padding:  10px 0px;
+  font-size: 25px;
+}
